# incubator-devlake

./: Makefile  docker-compose.yml
backend/plugins/argocd/: argocd.go
backend/plugins/argocd/api/: blueprint.go  connection.go
backend/plugins/argocd/impl/: impl.go
backend/plugins/argocd/models/: connection.go
backend/plugins/argocd/models/migrationscripts/: 20230609_add_init_tables.go
backend/plugins/argocd/tasks/: api_client.go  committer_collector.go  shared.go  task_data.go
backend/python/plugins/argocd/: README.md  pyproject.toml  run.sh
backend/python/plugins/argocd/argocd/: api.py  main.py  models.py
backend/python/plugins/argocd/argocd/streams/: comments.py  users.py
